--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="card">
         <div class="search">
             <input type="text "placeholder="Enter City Name " spellcheck="false">
-            <button><img src="search.png" alt=""></button>
+            <button class="btn" ><img src="search.png" alt=""></button>
         </div>
         <div class="error">
             <p>Invalid City name</p>
