--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="card">
+        <p style:text-align-center> Developed By Ankit kumar</p>
         <div class="search">
             <input type="text "placeholder="Enter City Name " spellcheck="false">
             <button class="btn" ><img src="search.png" alt=""></button>
